--- a/libdes/CMakeLists.txt
+++ b/libdes/CMakeLists.txt
@@ -14,7 +14,8 @@ set(SOURCES
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic -Wall -Wextra -Wno-unused-parameter")
 add_definitions(-D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64)
-add_definitions(-DDEBUG_FLAG)
+#add_definitions(-DDEBUG_FLAG)
+#add_definitions(-DCOST_FLAG)
 
 if (APPLE)
     add_definitions(-D_DARWIN_USE_64_BIT_INODE=1 -D_DARWIN_UNLIMITED_SELECT=1)
